pxc/tests/test_011_foreach/foldfe_block.px
namespace foldfe_block;
import common -;
import meta m;

function int foo(int x) { return x * 2; }
function int bar(int x) { return x * 3; }
function int baz(int x) { return x * 4; }

function void t1()
{
  int v = 10;
  int r = 0;
  int x = 0;
  expand (func : m::list{"foo", "bar", "baz"}) {
    {
      function void func() { // error: can't use this func
	x += 1;
      }
      func();
    }
  }
  println(x);
}

t1();
